--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
@@ -1,11 +1,14 @@
 ﻿<section>
-	<div data-bind="foreach: userPrivateEvents">
-		<div style="margin:4px;border:1px solid rgb(253, 253, 253);float:left;padding:10px;">
-			<div>rodzaj: <span data-bind="text: kind.kindName"></span></div>
-			<div>tytuł: <span data-bind="text: title"></span></div>
-			<div>godzina rozpoczęcia: <span data-bind="text: startDate.startHour"></span><span> : </span><span data-bind="	text: startDate.startMinute"></span></div>
-			<div>godzina zakończenia: <span data-bind="text: startDate.endHour"></span><span> : </span><span data-bind="	text: startDate.endMinute"></span></div>
-			<div>data: <span data-bind="text: startDate.day"></span><span>/</span><span data-bind="text: startDate.month"></span><span>/</span><span data-bind="text: startDate.year"></span></div>
+	<div data-bind="foreach: privateEvents">
+		<div class="lobby-event-rectangle" style="margin: 8px; float: left; padding: 10px; margin-left: 0px;">
+			<div data-bind="style: { color: kind.color, background: 'rgb(130,130,130)', padding: '10px', marginBottom: '10px' }">
+				<span data-bind="text: kind.kindName"></span>
+
+			</div>
+			<div><span data-bind="text: title, style: { fontSize: '2em' } "></span></div>
+			<div>godzina rozpoczęcia: <span data-bind="text: startDate.startHour"></span><span>: </span><span data-bind="	text: startDate.startMinute"></span></div>
+			<div>godzina zakończenia: <span data-bind="text: startDate.endHour"></span><span>: </span><span data-bind="	text: startDate.endMinute"></span></div>
+			<div>data: <span data-bind="text: startDate.day"></span><span>/</span><span data-bind="	text: startDate.month"></span><span>/</span><span data-bind="	text: startDate.year"></span></div>
 			<div>adres: <span data-bind="text: address.street"></span><span>, </span><span data-bind="	text: address.city"></span></div>
 		</div>
 	</div>
