--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -91,9 +91,9 @@ body header {
 
 #lobbyLogo {
 	background-image: url(../Images/Logo/kalendarzLogoTransparent.png);
-	position: relative !important;
+	position: absolute !important;
 	background-repeat: no-repeat;
-	bottom:86px;
+	top:-55px;
 	height:130px;
 	width:540px;
 }
@@ -323,7 +323,7 @@ body header {
 
 .lobby-event-rectangle {
 	height: 200px;
-	width: 300px;
+	width: 240px;
 	background: rgb(248, 248, 248);
 	border: 1px solid rgb(224,224,224);
 	color: rgb(119,119,119);
@@ -343,6 +343,14 @@ body header {
 	text-align: right;
 	padding-right: 100px;
 	color: gray;
+	margin-bottom:60px;
+}
+
+.lobby-loggedIn-bar {
+margin-top:75px;
+margin-bottom:30px;
+/*border-bottom:1px solid rgb(228, 228, 228);*/
+padding-bottom:20px;
 }
 
 .today-cell {
@@ -758,14 +766,7 @@ background:rgb(115, 233, 162);
 
 
 .lobby-profile-menu {
-	background: rgba(0,0,0,.04);
-	width: 50%;
-	color: rgb(104,104,104);
-	border: 1px solid rgb(216, 255, 232);
-	margin: 0 auto;
-	margin-top: 40px;
-	height: 200px;
-	box-shadow: 0px 0px 30px -6px rgb(111, 111, 111);
+
 }
 
 
@@ -821,9 +822,9 @@ background:rgb(115, 233, 162);
 	overflow: hidden;
 }
 
-.login-text {
+.loggedIn-nickname {
 	margin-right: 15px;
-	color: rgb(205, 255, 192);
+	color: rgb(153, 221, 136);
 }
 
 .event-kind-text {
