--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -93,9 +93,9 @@ body header {
 	background-image: url(../Images/Logo/kalendarzLogoTransparent.png);
 	position: absolute !important;
 	background-repeat: no-repeat;
-	top:-55px;
-	height:130px;
-	width:540px;
+	top: -55px;
+	height: 130px;
+	width: 540px;
 }
 
 .calendar-navigation-arrows-left {
@@ -343,14 +343,14 @@ body header {
 	text-align: right;
 	padding-right: 100px;
 	color: gray;
-	margin-bottom:60px;
+	margin-bottom: 60px;
 }
 
 .lobby-loggedIn-bar {
-margin-top:75px;
-margin-bottom:30px;
-/*border-bottom:1px solid rgb(228, 228, 228);*/
-padding-bottom:20px;
+	margin-top: 75px;
+	margin-bottom: 30px;
+	/*border-bottom:1px solid rgb(228, 228, 228);*/
+	padding-bottom: 20px;
 }
 
 .today-cell {
@@ -489,9 +489,7 @@ padding-bottom:20px;
 }
 
 #addNewEventContainer {
-	border-radius: 20px;
 	top: 25px;
-	padding-top: 20px;
 	position: absolute;
 	/*background: rgba(236, 255, 221, 1);*/
 	background: rgba(249, 255, 249, 1);
@@ -507,6 +505,7 @@ padding-bottom:20px;
 .large-popup-header {
 	width: 100%;
 	height: 30px;
+	margin-top: 12px;
 }
 
 .btn-close {
@@ -603,7 +602,7 @@ background:rgb(115, 233, 162);
 	color: gray;
 	font-size: 12px;
 	line-height: 1;
-	border-bottom: 5px solid;
+	/*border-bottom: 5px solid;*/
 	left: 0;
 	background: rgb(228, 228, 228);
 }
@@ -739,16 +738,16 @@ background:rgb(115, 233, 162);
 	position: relative;
 	font-size: .8em;
 	color: rgb(184,184,184);
-	z-index:5;
+	z-index: 5;
 }
 
 	#siteNavLegendContainer span {
-	border-top:1px solid rgb(216,216,216);
+		border-top: 1px solid rgb(216,216,216);
 	}
 
 .site-legend-border {
 	height: 14px;
-	width:3px;
+	width: 3px;
 	padding-right: 12px;
 	display: inline-block;
 	border-right: 1px solid rgb(216,216,216);
@@ -766,7 +765,6 @@ background:rgb(115, 233, 162);
 
 
 .lobby-profile-menu {
-
 }
 
 
@@ -1067,6 +1065,24 @@ wydarzenia-tab {
 	left: 400px;
 	display: none;
 }
+
+/*#addEventForm {
+	background: #f7f2ec url('Images/Form/letter_bg.png');
+	position: relative;
+	top: 200px;
+	overflow: hidden;
+	height: 200px;
+	width: 400px;
+	margin: 0px auto;
+	padding: 20px;
+	border: 1px solid #fff;
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	box-shadow: 0px 0px 3px #9d9d9d, inset 0px 0px 27px #fff;
+	-moz-box-shadow: 0px 0px 3px #9d9d9d, inset 0px 0px 14px #fff;
+	-webkit-box-shadow: 0px 0px 3px #9d9d9d, inset 0px 0px 27px #fff;
+}*/
 
 
 /*
