--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
 	@Scripts.Render("~/bundles/modernizr")
 	@Scripts.Render("~/bundles/knockout")
 
+	<script src="~/Scripts/KnockoutCustomBindings/KOCustomBindings.js"></script>
 	<script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
