--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -1,6 +1,6 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.AddEventViewModel
 
-<div id="addNewEventContainer">
+<div id="addNewEventContainer" class="slick-contact-form">
 
 	<div class="large-popup-header">
 		<div id="btnClose-AddEventContainer" class="btn-close" data-bind="click: $root.closeAddNewEventPopupOnClick()">
@@ -37,7 +37,7 @@
 						<div class="div-separator">
 							<div style="display: inline-block;">
 								<label>Godzina rozpoczęcia: </label>
-								<select id="startHourSelectBox" data-bind="value: startDate.startHour">
+								<select id="startHourSelectBox" class="time-select-box" data-bind="value: startDate.startHour">
 									@for (int i = 7; i < 22; i++)
 		 {
 										<option value="@i">@i</option>
@@ -46,7 +46,7 @@
 							</div>
 							<div style="display: inline-block;">
 								<span>: </span>
-								<select id="startMinuteSelectBox" data-bind="value: startDate.startMinute">
+								<select id="startMinuteSelectBox" class="time-select-box" data-bind="value: startDate.startMinute">
 									@for (int i = 0; i < 60; i++)
 		 {
 										<option value="@i">@i</option>
@@ -59,7 +59,7 @@
 						<div class="div-separator">
 							<div style="display: inline-block;">
 								<label>Godzina zakończenia: </label>
-								<select id="endHourSelectBox" data-bind="value: startDate.endHour">
+								<select id="endHourSelectBox" class="time-select-box" data-bind="value: startDate.endHour">
 									@for (int i = 7; i < 21; i++)
 		 {
 										<option value="@i">@i</option>
@@ -68,7 +68,7 @@
 							</div>
 							<div style="display: inline-block;">
 								<span>: </span>
-								<select id="endMinuteSelectBox" data-bind="value: startDate.endMinute">
+								<select id="endMinuteSelectBox" class="time-select-box" data-bind="value: startDate.endMinute">
 									@for (int i = 0; i < 60; i++)
 		 {
 										<option value="@i">@i</option>
@@ -85,7 +85,7 @@
 							</div>
 						</div>
 
-						<div id="addNewEventAddressLink" class="div-separator margin-left-150" data-bind="click: function () { $root.showGivenFieldInAddNewEventPopupOnClick($element) }">
+						<div id="addNewEventAddressLink" class="div-separator" data-bind="click: function () { $root.showGivenFieldInAddNewEventPopupOnClick($element) }">
 							<p class="underline">Dodaj adres</p>
 						</div>
 
@@ -107,7 +107,7 @@
 							</div>
 						</div>
 
-						<div id="addNewEventDescriptionLink" class="div-separator margin-left-150" data-bind="click: function () { $root.showGivenFieldInAddNewEventPopupOnClick($element) }">
+						<div id="addNewEventDescriptionLink" class="div-separator" data-bind="click: function () { $root.showGivenFieldInAddNewEventPopupOnClick($element) }">
 							<p class="underline">Dodaj opis</p>
 						</div>
 
@@ -119,7 +119,7 @@
 							</div>
 						</div>
 
-						<div id="addNewEventDetailsLink" class="div-separator margin-left-150" data-bind="click: function () { $root.showGivenFieldInAddNewEventPopupOnClick($element) }">
+						<div id="addNewEventDetailsLink" class="div-separator" data-bind="click: function () { $root.showGivenFieldInAddNewEventPopupOnClick($element) }">
 							<p class="underline">Dodaj szczegóły</p>
 						</div>
 
@@ -138,7 +138,7 @@
 
 					<input type="hidden" name="" id="hiddenDay" />
 
-					<button id="btnAddNewEvent" class="myButton-white margin-left-150" data-bind="click: $root.addEventOnClick.bind($data, $data.privacyLevel)">Dodaj</button>
+					<button id="btnAddNewEvent" class="myButton-white margin-left-285" data-bind="click: $root.addEventOnClick.bind($data, $data.privacyLevel)">Dodaj</button>
 				</fieldset>
    }
 		</div>
